# packetpilot-denial-rescue

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: config.py  db.py  denial_service.py  deps.py  document_service.py  eval_service.py  export_service.py  fhir_client.py  main.py  model_service.py  models.py  schemas.py  security.py  template_registry.py
apps/api/app/routers/: __init__.py  audit.py  auth.py  cases.py  denial.py  exports.py  fhir.py  model.py  settings.py
apps/api/scripts/: mock_fhir_server.py
apps/api/tests/: conftest.py  test_auth.py  test_autofill.py  test_cases.py  test_export_denial.py  test_healthz.py  test_model_service.py  test_model_status.py  test_questionnaire.py  test_settings.py  test_template_registry.py
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/case/[caseId]/: page.tsx
apps/web/app/cases/new/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/offline/: page.tsx
apps/web/app/onboarding/admin/: page.tsx
apps/web/app/onboarding/deployment/: page.tsx
apps/web/app/queue/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: auth-guard.tsx  citation-drawer.tsx  dev-sw-reset.tsx  install-prompt.tsx  workspace-frame.tsx
apps/web/lib/: api.ts  session.ts
apps/web/public/: manifest.webmanifest
apps/web/tests/: auth-settings.spec.ts  autofill-citations.spec.ts  case-flow.spec.ts  mobile-layout.spec.ts  onboarding.spec.ts  packet-export-denial.spec.ts  questionnaire-form.spec.ts
apps/web/tests/helpers/: auth.ts
demo/: denial-letter-demo.txt  evidence-note-demo.txt
docs/: AGENT_READINESS_SCORECARD.md  PROD_DEPLOY_AND_MODEL_PROOF.md  REPO_SETTINGS.md  Summary.md  kaggle_submission_draft_v2.md
infra/fhir/: seed-bundle.json  seed.sh
infra/scripts/: demo_epic6.sh  validate_prod_stack.sh  verify_model_status.sh
(+3 files in other folders)
